--- a/cnproj_dec3_finalizing.ipynb
+++ b/cnproj_dec3_finalizing.ipynb
@@ -32,7 +32,19 @@
      "outputs_hidden": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'genfromtxt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#importing data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m edges \u001b[38;5;241m=\u001b[39m genfromtxt(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/maedehrahimitouranposhti/Downloads/cnproj_edges.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m,dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m)\n\u001b[1;32m      3\u001b[0m nodes \u001b[38;5;241m=\u001b[39m genfromtxt(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/Users/maedehrahimitouranposhti/Downloads/cnproj_nodes.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m,dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'genfromtxt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#importing data\n",
     "edges = genfromtxt('/Users/maedehrahimitouranposhti/Downloads/cnproj_edges.csv', delimiter=',',dtype=str)\n",
@@ -55,7 +67,8 @@
     "array=edges[1:,0:3]\n",
     "source=array[:,0]\n",
     "target=array[:,1]\n",
-    "weight=array[:,2]"
+    "weight=array[:,2]\n",
+    "#comment"
    ]
   },
   {
