--- a/cnproj_dec3_finalizing.ipynb
+++ b/cnproj_dec3_finalizing.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -91,8 +91,8 @@
     "nodes = nodes.drop_duplicates().reset_index(drop=True)\n",
     "\n",
     "\n",
-    "edges_output_file_path = '/Users/maedehrahimitouranposhti/Downloads/research/railonlyedges.csv'\n",
-    "nodes_output_file_path = '/Users/maedehrahimitouranposhti/Downloads/research/railonlynodes.csv'\n",
+    "#edges_output_file_path = '/Users/maedehrahimitouranposhti/Downloads/research/railonlyedges.csv'\n",
+    "#nodes_output_file_path = '/Users/maedehrahimitouranposhti/Downloads/research/railonlynodes.csv'\n",
     "edges.to_csv(edges_output_file_path, index=False)\n",
     "nodes.to_csv(nodes_output_file_path, index=False)\n",
     "\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -194,6 +194,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.140068131514188\n"
+     ]
     }
    ],
    "source": [
@@ -234,7 +241,8 @@
     "fit1.power_law.plot_pdf(ax=ax, label='Power law fit', color='r', marker='+')\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
     "plt.title('Degree distribution \\n', fontsize=16)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "print(gamma1)"
    ]
   },
   {
@@ -322,14 +330,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "average degree:  20.19047619047619\n"
+      "average degree:  20.19047619047619\n",
+      "84\n"
      ]
     }
    ],
@@ -337,7 +346,8 @@
     "#average degree\n",
     "averagedegree=G.size()*2/len(G)\n",
     "print (\"average degree: \",averagedegree)\n",
-    "#G.nodes()"
+    "#G.nodes()\n",
+    "print(len(G))"
    ]
   },
   {
