--- a/CleanFile.ipynb
+++ b/CleanFile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 1,
    "id": "140faa00-0e13-428f-a889-6a1254d9f3e7",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 516,
+   "execution_count": 2,
    "id": "6b9f5528-9b7c-48ef-8c94-d40b7decb230",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 517,
+   "execution_count": 3,
    "id": "ddd50f8d-966b-4bba-9b4d-d5acfc1f8341",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 4,
    "id": "468000a2-76a0-4975-bb65-12f60527ee1d",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 6,
    "id": "f8bb12aa-f290-4611-8486-14c77c834278",
    "metadata": {},
    "outputs": [
@@ -142,6 +142,8 @@
     "edges_array = edges[['dms_orig_string', 'dms_dest_string', 'distance_miles']].values\n",
     "G.add_weighted_edges_from(edges_array)\n",
     "\n",
+    "\n",
+    "#removed = None\n",
     "# Degree robustness function\n",
     "def degree_robust_remove(G):\n",
     "    G = G.copy()\n",
@@ -196,7 +198,7 @@
     "# Execute degree robustness analysis\n",
     "Gc_d, removed_degree, G_updated_degree = degree_robust_remove(G)\n",
     "print(\"Degree robustness (size of largest connected component after each removal):\", Gc_d)\n",
-    "print(\"Nodes removed in order:\", removed)\n",
+    "print(\"Nodes removed in order:\", removed_degree)\n",
     "\n",
     "# Execute random robustness analysis\n",
     "Gc_dr,removed_random,G_updated_random = degree_robust_rand(G)\n",
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 7,
    "id": "e2f1c14a-8be3-4ec4-9bc4-7274380f0709",
    "metadata": {},
    "outputs": [
@@ -343,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 8,
    "id": "2ed60103-4c76-48f1-8766-f3fe8d2f7ae2",
    "metadata": {},
    "outputs": [],
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 9,
    "id": "8326cd09-f32e-4172-9895-b6f241a0d98f",
    "metadata": {},
    "outputs": [],
@@ -364,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 11,
    "id": "21227595-62be-491e-9b9c-c80b8fa7bdda",
    "metadata": {},
    "outputs": [
@@ -373,7 +375,7 @@
      "output_type": "stream",
      "text": [
       "Degree robustness (size of largest connected component after each removal): [42, 39, 36, 34, 28, 23, 13, 10, 8, 8, 7, 4, 4, 4, 4, 4, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
-      "Nodes removed in order: ['Houston TX', 'Iowa', 'Chicago IL-IN-WI (IL Part)', 'Los Angeles CA', 'Baton Rouge LA', 'New Orleans LA-MS (LA Part)', 'Wyoming', 'Atlanta GA', 'Detroit MI', 'Fort Wayne IN', 'Cleveland OH', 'Minneapolis-St. Paul MN-WI (MN Part)', 'Beaumont TX', 'San Francisco CA', 'Philadelphia PA-NJ-DE-MD (PA Part)', 'Portland OR-WA (OR Part)', 'Tampa FL', 'Philadelphia PA-NJ-DE-MD (NJ Part)', 'Indianapolis IN', 'Baltimore MD', 'Salt Lake City UT', 'Chicago IL-IN-WI (IN Part)', 'Columbus OH', 'Birmingham AL', 'New York NY-NJ-CT-PA (NY Part)', 'Charleston SC', 'Memphis TN-MS-AR (TN Part)', 'New York NY-NJ-CT-PA (NJ Part)', 'Charlotte NC-SC (NC Part)', 'Omaha NE-IA (NE Part)', 'Pittsburgh PA-OH-WV (PA Part)', 'St. Louis MO-IL (MO Part)', 'Jacksonville FL-GA  CFS Area (FL Part)', 'Nashville TN', 'Richmond VA', 'Albany NY  CFS Area', 'Washington DC-VA-MD-WV (MD Part)', 'Cincinnati OH-KY-IN (OH Part)', 'Miami FL', 'Denver CO', 'New Mexico', 'Sacramento CA', 'Buffalo NY  CFS Area', 'Washington DC-VA-MD-WV (VA Part)', 'Kansas City MO-KS (KS Part)', 'Knoxville TN', 'Louisville KY-IN (KY Part)', 'Wichita KS', 'Phoenix AZ', 'Seattle WA', 'Milwaukee WI', 'Boston MA-RI-NH-CT (MA Part)', 'Philadelphia PA-NJ-DE-MD (DE Part)', 'Mobile AL', 'New York NY-NJ-CT-PA (PA Part)', 'Rochester NY', 'Vermont', 'San Diego CA', 'Austin TX', 'Raleigh-Durham NC', 'Cincinnati OH-KY-IN (KY Part)', 'Corpus Christi TX', 'El Paso TX-NM (TX Part)', 'Greenville SC', 'Kansas City MO-KS (MO Part)', 'San Antonio TX', 'Savannah GA', 'St. Louis MO-IL (IL Part)', 'Tulsa OK', 'Grand Rapids MI', 'Laredo TX', 'Virginia Beach-Norfolk VA-NC (VA Part)', 'Dayton OH', 'Oklahoma City OK', 'New York NY-NJ-CT-PA (CT Part)', 'Hartford CT', 'Portland OR-WA (WA Part)', 'Tucson AZ', 'Fresno CA', 'Washington DC-VA-MD-WV (DC Part)', 'Orlando FL', 'Boston MA-RI-NH-CT (NH Part)', 'Boston MA-RI-NH-CT (RI Part)', 'Las Vegas NV-AZ (NV Part)']\n",
+      "Nodes removed in order: ['New Orleans LA-MS (LA Part)', 'Houston TX', 'Baton Rouge LA', 'Corpus Christi TX', 'Beaumont TX', 'Pittsburgh PA-OH-WV (PA Part)', 'St. Louis MO-IL (IL Part)', 'Chicago IL-IN-WI (IL Part)', 'Memphis TN-MS-AR (TN Part)', 'Philadelphia PA-NJ-DE-MD (NJ Part)', 'New York NY-NJ-CT-PA (NY Part)', 'Cincinnati OH-KY-IN (KY Part)', 'Portland OR-WA (OR Part)', 'Los Angeles CA', 'Minneapolis-St. Paul MN-WI (MN Part)', 'Philadelphia PA-NJ-DE-MD (PA Part)', 'Louisville KY-IN (KY Part)', 'Savannah GA', 'Virginia Beach-Norfolk VA-NC (VA Part)', 'Albany NY  CFS Area', 'Chicago IL-IN-WI (IN Part)', 'Miami FL', 'Mobile AL', 'Nashville TN', 'San Francisco CA', 'New York NY-NJ-CT-PA (NJ Part)', 'Tampa FL', 'Tulsa OK', 'Philadelphia PA-NJ-DE-MD (DE Part)', 'Seattle WA', 'Knoxville TN', 'San Diego CA', 'Cincinnati OH-KY-IN (OH Part)', 'Cleveland OH', 'Columbus OH', 'Iowa', 'St. Louis MO-IL (MO Part)', 'Grand Rapids MI', 'Charleston SC', 'New York NY-NJ-CT-PA (CT Part)', 'Kansas City MO-KS (KS Part)', 'Jacksonville FL-GA  CFS Area (FL Part)', 'Kansas City MO-KS (MO Part)', 'Baltimore MD', 'Boston MA-RI-NH-CT (MA Part)', 'Portland OR-WA (WA Part)', 'Richmond VA']\n",
       "Random removal robustness (size of largest connected component after each removal): [42, 41, 41, 40, 38, 38, 38, 37, 36, 35, 34, 34, 33, 32, 31, 29, 28, 27, 27, 22, 22, 21, 20, 20, 20, 19, 19, 18, 18, 17, 16, 15, 15, 14, 12, 11, 10, 9, 8, 7, 6, 5, 3, 3, 3, 2, 1]\n",
       "Random removal robustness (nodes with largest increase in hot days removed first): [42, 41, 40, 39, 38, 37, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 19, 19, 18, 17, 16, 16, 16, 15, 14, 13, 12, 11, 10, 7, 7, 6, 6, 6, 3, 3, 3, 3, 2, 2, 2, 2, 2, 1]\n"
      ]
@@ -456,7 +458,7 @@
     "# Execute degree robustness analysis\n",
     "Gc_d, removed_degree, G_updated_degree = degree_robust_remove(G)\n",
     "print(\"Degree robustness (size of largest connected component after each removal):\", Gc_d)\n",
-    "print(\"Nodes removed in order:\", removed)\n",
+    "print(\"Nodes removed in order:\", removed_degree)\n",
     "\n",
     "# Execute random robustness analysis\n",
     "Gc_dr,removed_random,G_updated_random = degree_robust_rand(G)\n",
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 12,
    "id": "9578713a-adf3-4fd5-a4aa-8f8d1f092f5b",
    "metadata": {},
    "outputs": [
@@ -603,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 13,
    "id": "8a7fc5d8-42b9-4338-a5cf-aa2fd0be6abd",
    "metadata": {},
    "outputs": [],
@@ -631,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 14,
    "id": "fef96283-c55e-4168-8aa6-f0149252d98f",
    "metadata": {},
    "outputs": [
