--- a/HeatWave_NERSC-Clean.ipynb
+++ b/HeatWave_NERSC-Clean.ipynb
@@ -332,9 +332,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyces",
+   "display_name": "Python [conda env:esgf-cookbook-dev]",
    "language": "python",
-   "name": "pyces"
+   "name": "conda-env-esgf-cookbook-dev-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -346,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
